--- a/demos/245-effect-pileflow.html
+++ b/demos/245-effect-pileflow.html
@@ -84,6 +84,10 @@
         }
       }
     });
+
+    swiper.ttTranslateValue = 0.8;
+    swiper.coverflowEffect.updateTtTranslate();
+
   </script>
 </body>
 </html>
